# rephactor

./: .gitignore  Cargo.toml  PLAN.md  README.md  ROADMAP.md
.github/workflows/: ci.yml  release.yml
docs/: semantic-metadata.md
scripts/: check-zed-extension.sh
src/: document.rs  main.rs  php.rs  server.rs
tests/: lsp_smoke.rs
zed-extension/: Cargo.toml  extension.toml
zed-extension/src/: lib.rs
