[package]
name = "rephactor"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A companion PHP language server for semantic refactoring code actions."

[dependencies]
anyhow = "1"
serde_json = "1"
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread"] }
tower-lsp = "0.20"
tree-sitter = "0.25"
tree-sitter-php = "0.24"
